<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TRSapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_trs">TRS</string>
    <string name="str_trs_fullname">TELANGANA RASHTRA SAMITHI</string>
    <string name="str_news">News</string>
    <string name="str_trs_party">TRS Party</string>
    <string name="str_about">About</string>
    <string name="str_media">Media</string>
    <string name="str_social_feeds">Social Feeds</string>
    <string name="str_join">Join</string>
    <string name="str_donate">Donate</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_history">History</string>
    <string name="str_latest_feeds">LATEST FEEDS</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_twitter">Twitter</string>
    <string name="str_timeline">Timeline</string>
    <string name="str_leadership">Leadership</string>

</resources>