<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_txt" >

    <LinearLayout
        android:id="@+id/social_feeds_ll_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lll_social"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/social_feeds_ll_lay"
        android:orientation="vertical"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/ll_linear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RelativeLayout
                android:id="@+id/rrr_face_book"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_face_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_launcher"
                    android:padding="9dp"
                     android:background="@null"
                    android:text="@string/str_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/black_titles"
                    android:textSize="@dimen/dashboard_labels" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rrr_twitter"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="-6dp"
                android:layout_weight="0.5"
                android:background="@color/light_gray"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_launcher"
                    android:padding="9dp"
                     android:background="@null"
                    android:text="@string/str_twitter"
                    android:textAllCaps="false"
                    android:textColor="@color/black_titles"
                    android:textSize="@dimen/dashboard_labels" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_latest_feeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lll_social"
        android:padding="10dp"
        android:text="@string/str_latest_feeds"
        android:textSize="@dimen/dashboard_labels" />

    <ListView
        android:id="@+id/social_feeds_facebook_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_latest_feeds"
        android:background="@color/white_txt"
        android:divider="@color/list_divider"
        android:dividerHeight="0sp"
        android:paddingBottom="6dp" >
    </ListView>
     <ListView
        android:id="@+id/social_feeds_twitter_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/txt_latest_feeds"
        android:background="@color/white_txt"
        android:divider="@color/list_divider"
        android:dividerHeight="0sp"
        android:paddingBottom="6dp" >
    </ListView>
    
    

</RelativeLayout>